--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         function send(me) {
             var firstPart =         me.split("").reverse().join("").replace(/ /g,"&#46;")
             var lastPart = "moc liamg".split("").reverse().join("").replace(/ /g,"&#46;")
-            document.write("<a href='&#109;&#97;ilto&#58;"+firstPart+"&#64;"+lastPart+"&#63;&#115;ub&#106;ect&#61;GroundForge'>"+firstPart+"&#64;"+lastPart+"</a>")
+            document.write("<a href='&#109;&#97;ilto&#58;"+firstPart+"&#64;"+lastPart+"&#63;&#115;ub&#106;ect&#61;GroundForge'>"+"contact+"</a>")
         }
     </script>
     {% endif %}
