--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -11,11 +11,15 @@
 <a href="https://maetempels.github.io/MAE-gf/docs/bias">Bias Grounds</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/snowflakes">Snowflakes</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/spiders">Spiders</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/tria">Pagoda's or Triangular Grounds</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/tria">Triangular Grounds</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fish">Milanese Fish</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/lotus">Milanese Lotus</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fancy">Fancy examples</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/marian">Marian's patterns</a><br>
+</p>
+
+<h3>Own examples</h3>
+<p>  
+<a href="https://maetempels.github.io/MAE-gf/docs/marian">Marian's grounds</a><br>
 </p>
 
 <h3>Miscellaneous</h3> 
