20171129 changed fancy into miscellaneous

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -14,7 +14,7 @@
 <a href="https://maetempels.github.io/MAE-gf/docs/tria">Triangular Grounds</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fish">Milanese Fish</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/lotus">Milanese Lotus</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/fancy">Fancy examples</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/fancy">Miscellaneous examples</a><br>
 </p>
 
 <h3>Own examples</h3>
