20171130 added reference to self

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -41,6 +41,8 @@
 <h2>References</h2>
 <p>
   WI = Whiting Index, see Groundforge Examples page.
+  JP = J. Pol
+  MT = M. Tempels
 </p>
 
 <p><hr></p>
