--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -40,9 +40,9 @@
 
 <h2>References</h2>
 <p>
-  WI = Whiting Index, see Groundforge Examples page.
-  JP = J. Pol
-  MT = M. Tempels
+  WI = Whiting Index, see Groundforge Examples page.<br>
+  JP = J. Pol <br>
+  MT = M. Tempels <br>
 </p>
 
 <p><hr></p>
