--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -14,7 +14,7 @@
 <a href="https://maetempels.github.io/MAE-gf/docs/tria">Triangular Grounds</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/fish">Milanese Fish</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/lotus">Milanese Lotus</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/fancy">Miscellaneous examples</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/misca">Miscellaneous examples</a><br>
 </p>
 
 <h3>Own examples</h3>
@@ -40,7 +40,7 @@
 
 <h2>References</h2>
 <p>
-  WI = Whiting Index, see Groundforge Examples page.<br>
+  WI = Whiting Index <br>
   JP = J. Pol <br>
   MT = M. Tempels <br>
 </p>
