--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -26,7 +26,7 @@
 <p>
 <a href="https://maetempels.github.io/MAE-gf/docs/maths">Mathematics</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/about-us">About us &amp; Contact</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/licence">Copyright, license, references</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/license">Copyright, license, references</a><br>
 <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" />
 </p>
 
