--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -1,6 +1,6 @@
-<figure style="inline-block">
-   <img src="/MAE-gf/images_flanders/{{ include.src }}.JPG" width="220" height="220" style="block">
-   <figcaption style="block">
+<figure style="display: inline-block">
+   <img src="/MAE-gf/images_flanders/{{ include.src }}.JPG" width="220" height="220" style="display: block">
+   <figcaption style="display: block">
        <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG" target="_blank">zoom in</a> -
        <a href="https://d-bl.github.io/GroundForge/index.html?m=5831%0A-4-7%3Bbricks%3B10%3B10%3B0%3B0&s1={{ include.stitches }}&s2=&s3=" target="_blank">diagrams</a>
    </figcaption>
