changing & to &amp;

--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -5,7 +5,7 @@
        <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG" target="_blank">zoom in</a>
        {% if include.stitches %}
        -
-       <a href="https://d-bl.github.io/GroundForge/index.html?m=5831%0A-4-7%3Bbricks%3B10%3B10%3B0%3B0&s1={{ include.stitches }}&s2=&s3=" target="_blank">diagrams</a>
+       <a href="https://d-bl.github.io/GroundForge/index.html?m=5831%0A-4-7%3Bbricks%3B10%3B10%3B0%3B0&amp;s1={{ include.stitches }}&amp;s2=&amp;s3=" target="_blank">diagrams</a>
        {% endif %}
    </figcaption>
 </figure>
