--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -1,7 +1,7 @@
 <figure style="display: inline-block">
    <img src="/MAE-gf/images_flanders/{{ include.src }}.JPG" width="220" height="220" style="display: block">
    <figcaption style="display: block">
-       {{ include.name }} : {{ include.src }} :
+       {{ include.name }}, {{ include.src }}
        <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG" target="_blank">zoom in</a>
        {% if include.stitches %}
        -
