--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -1,7 +1,7 @@
 <figure style="display: inline-block">
    <img src="/MAE-gf/images_flanders/{{ include.src }}.JPG" width="220" height="220" style="display: block">
    <figcaption style="display: block">
-       <table style="width:180">
+       <table style="width:180px">
            <tr><td>{{ include.d1 }}</td><td>{{ include.a1 }}</td><td>{{ include.b1 }}</td></tr>
            <tr><td>{{ include.d2 }}</td><td>&bull;</td><td>{{ include.b2 }}</td></tr>
            <tr><td>{{ include.b1 }}</td><td>{{ include.c1 }}</td><td>{{ include.d1 }}</td></tr>
