--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -6,12 +6,14 @@
            <tr><td>{{ include.d2 }}</td><td>&bull;</td><td>{{ include.b2 }}</td></tr>
            <tr><td>{{ include.b1 }}</td><td>{{ include.c1 }}</td><td>{{ include.d1 }}</td></tr>
        </table>
-       {{ include.name }}, {{ include.src }}
-       <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG" target="_blank">zoom in</a>
-       {% if include.stitches %}
+       {% if include.name %}{{ include.name }},{% endif %}
+       {{ include.src }}
+       <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG"
+          target="_blank"
+       >zoom in</a>
        -
        <a href="https://d-bl.github.io/GroundForge/index.html?m=5831%0A-4-7%3Bbricks%3B10%3B10%3B0%3B0&s1={{ include.stitches }}&s2=&s3="
-          target="_blank">diagrams</a>
-       {% endif %}
+          target="_blank"
+       >diagrams</a>
    </figcaption>
 </figure>
