--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -6,7 +6,9 @@
            <tr><td>{{ include.d2 }}</td><td>&bull;</td><td>{{ include.b2 }}</td></tr>
            <tr><td>{{ include.b1 }}</td><td>{{ include.c1 }}</td><td>{{ include.d1 }}</td></tr>
        </table>
-       {% if include.name %}{{ include.name }},{% endif %}
+       {% if include.name %}
+           {{ include.name }},
+       {% endif %}
        {{ include.src }}
        <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG"
           target="_blank"
