--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -1,5 +1,7 @@
 <figure style="display: inline-block">
-   <img src="/MAE-gf/images_flanders/{{ include.src }}.JPG" width="220" height="220" style="display: block">
+   <div style="width:110px; overflow:hidden">
+       <img src="/MAE-gf/images_flanders/{{ include.src }}.JPG" width="220" height="220">
+   </div>
    <figcaption style="display: block">
        <table style="width:150px">
            <tr><td>{{ include.d1 }}</td><td>{{ include.a1 }}</td><td>{{ include.b1 }}</td></tr>
@@ -9,7 +11,7 @@
        {% if include.name %}
            {{ include.name }},
        {% endif %}
-       {{ include.src }}
+       {{ include.src }}<br>
        <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG"
           target="_blank"
        >zoom in</a>
