--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -1,5 +1,12 @@
 <figure style="display: inline-block">
-   <img src="/MAE-gf/images_flanders/{{ include.src }}.JPG" width="220" height="220" style="display: block">
+    <div>
+        <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG"
+           target="_blank"
+        ><img src="/MAE-gf/images_flanders/{{ include.src }}.JPG"
+              width="220"
+              height="220"
+        ></a>
+   </div>
    <figcaption style="display: block">
        <table style="width:150px">
            <tr><td>{{ include.d1 }}</td><td>{{ include.a1 }}</td><td>{{ include.b1 }}</td></tr>
@@ -10,6 +17,7 @@
            {{ include.name }},
        {% endif %}
        {{ include.src }}
+       <br>
        <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG"
           target="_blank"
        >zoom in</a>
