--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -1,4 +1,4 @@
-<figure style="display: inline-block">
+<figure style="display: inline-block; padding-bottom: 2em">
     <div>
         <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG"
            target="_blank"
