--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -19,7 +19,8 @@
 
 <h3>Own examples</h3>
 <p>  
-<a href="https://maetempels.github.io/MAE-gf/docs/marian">Marian's grounds</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/marian">Grounds by Marian</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/flanders">Flanders grounds by 't Groene Hart</a><br>
 </p>
 
 <h3>Miscellaneous</h3> 
