--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -1,11 +1,29 @@
-<figure style="display: inline-block">
-   <img src="/MAE-gf/images_flanders/{{ include.src }}.JPG" width="220" height="220" style="display: block">
+<figure style="display: inline-block; padding-bottom: 2em">
+    <div>
+        <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG"
+           target="_blank"
+        ><img src="/MAE-gf/images_flanders/{{ include.src }}.JPG"
+              width="220"
+              height="220"
+        ></a>
+   </div>
    <figcaption style="display: block">
-       {{ include.src }} :
-       <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG" target="_blank">zoom in</a>
-       {% if include.stitches %}
-       -
-       <a href="https://d-bl.github.io/GroundForge/index.html?m=5831%0A-4-7%3Bbricks%3B10%3B10%3B0%3B0&s1={{ include.stitches }}&s2=&s3=" target="_blank">diagrams</a>
+       <table style="width:150px">
+           <tr><td>{{ include.d1 }}</td><td>{{ include.a1 }}</td><td>{{ include.b1 }}</td></tr>
+           <tr><td>{{ include.d2 }}</td><td>&bull;</td><td>{{ include.b2 }}</td></tr>
+           <tr><td>{{ include.b1 }}</td><td>{{ include.c1 }}</td><td>{{ include.d1 }}</td></tr>
+       </table>
+       {% if include.name %}
+           {{ include.name }},
        {% endif %}
+       {{ include.src }}
+       <br>
+       <a href="/MAE-gf/images_flanders/{{ include.src }}.JPG"
+          target="_blank"
+       >zoom in</a>
+       -
+       <a href="https://d-bl.github.io/GroundForge/index.html?m=5831%0A-4-7%3Bbricks%3B10%3B10%3B0%3B0&s1={{ include.stitches }}&s2=&s3="
+          target="_blank"
+       >diagrams</a>
    </figcaption>
 </figure>
