--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,14 +22,15 @@
 
     {% seo %}
     
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="/MAE-gf/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/MAE-gf/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/MAE-gf/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/MAE-gf/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/MAE-gf/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/MAE-gf/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#603cba">
+    <meta name="msapplication-config" content="/MAE-gf/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-    
     
 </head>
 
