flanders links to new tiles page for diagrams

--- a/_includes/flanders.html
+++ b/_includes/flanders.html
@@ -22,7 +22,7 @@
           target="_blank"
        >zoom in</a>
        -
-       <a href="https://d-bl.github.io/GroundForge/index.html?m=5831%0A-4-7%3Bbricks%3B10%3B10%3B0%3B0&s1={{ include.stitches }}&s2=&s3="
+       <a href="https://d-bl.github.io/GroundForge/tiles?repeatWidth=11&repeatHeight=11&c1={{ include.d1 }}&d1={{ include.a1 }}&e1={{ include.b1 }}&c2={{ include.d2 }}&e2={{ include.b2 }}&d3={{ include.c1 }}&shiftColsSE=2&shiftRowsSE=2&shiftColsSW=-2&shiftRowsSW=2&footside=-5,B-,-2,b-,,&tile=831,4-7,-5-&headside=5-,-c,6-,-c"
           target="_blank"
        >diagrams</a>
    </figcaption>
