--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -38,6 +38,7 @@
 <p>
   <a href="https://d-bl.github.io/GroundForge/">Main site</a><br>
   <a href="https://d-bl.github.io/GroundForge/help/">User guide</a><br>
+  <a href="https://d-bl.github.io/GroundForge/tiles">New site</a><br>
 </p>
 
 <p><hr></p>
