--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -36,9 +36,10 @@
 
 <h2>Groundforge</h2>
 <p>
-  <a href="https://d-bl.github.io/GroundForge/">Main site</a><br>
+  <a href="https://d-bl.github.io/GroundForge/tiles">Main site</a><br>
+  <a href="https://d-bl.github.io/GroundForge/">Groundforge with Droste</a><br>
   <a href="https://d-bl.github.io/GroundForge/help/">User guide</a><br>
-  <a href="https://d-bl.github.io/GroundForge/tiles">Tiles site</a><br>
+  
 </p>
 
 <p><hr></p>
