add paris grounds

--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -9,6 +9,7 @@
 <h3>Examples</h3>
 <p>
 <a href="https://maetempels.github.io/MAE-gf/docs/bias">Bias Grounds</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/paris">Paris Grounds</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/snowflakes">Snowflakes</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/spiders">Spiders</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/tria">Triangular Grounds</a><br>
