--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -1,8 +1,9 @@
 <figure>
 	<a href="{{ include.lnk }}">  
+	<span class="clpic">
         <img alt="{{ include.alt }}" src="{{ include.src }}" alt="{{ include.alt }}" 
 	style="float: left; margin-right:1em">
-        </a>
+	</a></span>
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
 </figure>
