--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -3,7 +3,7 @@
 	<span class="clpic">
         <img alt="{{ include.alt }}" src="{{ include.src }}" alt="{{ include.alt }}" 
 	style="float: left; margin-right:1em">
-	</a></span>
+	</span></a>
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
 </figure>
