--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -1,9 +1,8 @@
 <figure>
 	<a href="{{ include.lnk }}">  
-	<span class="clpic">
-        <img alt="{{ include.alt }}" src="{{ include.src }}" alt="{{ include.alt }}" 
-	style="float: left; margin-right:1em">
-	</span></a>
+	<img alt="{{ include.alt }}" src="{{ include.src }}" alt="{{ include.alt }}" 
+	style="float: left; margin-right:1em; border-style: solid; border-width: 1px; border-color: blue">
+	</a>
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
 </figure>
