--- a/_includes/p-l-c.html
+++ b/_includes/p-l-c.html
@@ -1,5 +1,5 @@
 <figure>
-  <p style="text-align: center;">
+  <p style="text-align: center; border-style: solid; border-width: 1px; border-color: blue">
   <a href="{{ include.lnk }}">  
   <img alt="{{ include.alt }}" src="{{ include.src }}">
   </a>
