--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,7 @@
 figure { display: block; margin:0; }
 
 /* click pict */
-.clpic {border-style: solid; border-width: 1px; border-color: blue"}
+.clpic {border-style: solid; border-width: 1px; border-color: blue}
 
 /* floating pictures */
 .break { clear: both; }
