--- a/_includes/p-l-c.html
+++ b/_includes/p-l-c.html
@@ -1,7 +1,7 @@
 <figure>
   <p style="text-align: center">
   <a href="{{ include.lnk }}">  
-  <img alt="{{ include.alt }}" src="{{ include.src }}" style="border-style: solid; border-width: 1px; border-color: blue">
+  <img alt="{{ include.alt }}" src="{{ include.src }}" style="border-style: solid; border-width: 1px; border-color: LightBlue">
   </a>
   </p>
 </figure>
