--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -1,7 +1,7 @@
 <figure>
 	<a href="{{ include.lnk }}">  
 	<img alt="{{ include.alt }}" src="{{ include.src }}" alt="{{ include.alt }}" 
-	style="float: left; margin-right:1em; border-style: solid; border-width: 1px; border-color: blue">
+	style="float: left; margin-right:1em; border-style: solid; border-width: 1px; border-color: LightBlue">
 	</a>
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
