--- a/_includes/p-l-r.html
+++ b/_includes/p-l-r.html
@@ -1,6 +1,6 @@
 <figure>
 	<a href="{{ include.lnk }}">  
-	<img alt="{{ include.alt }}" src="{{ include.src }}" alt="{{ include.alt }}" 
+	<img src="{{ include.src }}" alt="{{ include.alt }}" 
 	style="float: right; margin-right:1em; border-style: solid; border-width: 1px; border-color: LightBlue">
 	</a>
 	<p>{{ include.description }}</p>
