--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -1,8 +1,9 @@
 <figure>
+	<span class="clpic">
 	<a href="{{ include.lnk }}">  
 	<img src="{{ include.src }}" alt="{{ include.alt }}" 
-	style="float: left; margin-right:1em; border-style: solid; border-width: 1px; border-color: LightBlue">
-	</a>
+	style="float: left; margin-right:1em >
+	 </a></span>
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
 </figure>
