--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -1,9 +1,8 @@
 <figure>
 	<a href="{{ include.lnk }}">  
-	<span class="clpic">
 	<img src="{{ include.src }}" alt="{{ include.alt }}" 
-	style="float: left; margin-right:1em >
-	 </span></a>
+	style="float: left; margin-right:1em class="clpic">
+	</a>
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
 </figure>
