--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,9 @@
 figure { display: block; margin:0; }
 
 /* border 
+<style>
 .clpic {border-style: solid; border-width: 1px; border-color: LightBlue
+</style>
 
 /* floating pictures */
 .break { clear: both; }
