--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,7 +20,7 @@ figure { display: block; margin:0; }
 
 /* border 
 <style>
-.clpic {border-style: solid; border-width: 1px; border-color: LightBlue
+.clpic {border-style: solid; border-width: 1px; border-color: LightBlue} 
 </style>
 
 /* floating pictures */
