--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -1,7 +1,8 @@
 <figure>
 	<a href="{{ include.lnk }}">  
+	<img class="clipc">
 	<img src="{{ include.src }}" alt="{{ include.alt }}" 
-	style="float: left; margin-right:1em" class="clpic">
+	style="float: left; margin-right:1em">
 	</a>
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
