--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -1,9 +1,9 @@
 <figure>
 	<a href="{{ include.lnk }}">  
-	<img class="clipc">
+	<span class="clipc">
 	<img src="{{ include.src }}" alt="{{ include.alt }}" 
 	style="float: left; margin-right:1em">
-	</a>
+	</span></a>
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
 </figure>
