--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,9 +19,7 @@
 figure { display: block; margin:0; }
 
 /* border 
-<style>
-.clpic {border-style: solid; border-width: 1px; border-color: LightBlue} 
-</style>
+.clpic {border-style: solid; border-width: 1px; border-color: LightBlue;} 
 
 /* floating pictures */
 .break { clear: both; }
