--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -1,8 +1,7 @@
 <figure>
 	<a href="{{ include.lnk }}">  
-	<span class="clipc">
 	<img src="{{ include.src }}" alt="{{ include.alt }}" 
-	style="float: left; margin-right:1em">
+	class="clipc" style="float: left; margin-right:1em">
 	</span></a>
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
