--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -1,8 +1,8 @@
 <figure>
 	<a href="{{ include.lnk }}">  
 	<img src="{{ include.src }}" alt="{{ include.alt }}" 
-	class="clipc" style="float: left; margin-right:1em">
-	</span></a>
+	class="clpic" style="float: left; margin-right:1em"; >
+	</a>
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
 </figure>
