--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@
 /* pictures */
 figure { display: block; margin:0; }
 
-/* border 
+/* border */
 .clpic {border-style: solid; border-width: 1px; border-color: LightBlue;} 
 
 /* floating pictures */
