--- a/_includes/p-l-r.html
+++ b/_includes/p-l-r.html
@@ -1,7 +1,7 @@
 <figure>
 	<a href="{{ include.lnk }}">  
 	<img src="{{ include.src }}" alt="{{ include.alt }}" 
-	class="clpic"  style="float: right; margin-right:1em;">
+	class="clpic"  style="float: right; margin-left:1em;">
 	</a>
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
