--- a/_includes/woble.html
+++ b/_includes/woble.html
@@ -30,7 +30,7 @@
         var right = document.getElementById("right").value
         var bottom = document.getElementById("bottom").value
 
-        var droste2 = `cross=ctct,twist=ct,a11=rrrtcttt,g22=lllctcttt,c10=b20=${top},b11=b12=c15=b25=${topLeft},c21=c22=b14=b24=${topRight},c11=b21=${left},c12=b22=${right},c13=b23=${bottom}`
+        var droste2 = `cross=ctct,twist=ct,a11=rrrtcttt,g22=lllctcttt,c10=b20=${top},b11=b12=c15=b25=${topLeft},c21=c22=c14=b24=${topRight},c11=b21=${left},c12=b22=${right},c13=b23=${bottom}`
         var droste1 = "c1=ctct&b1=ct&a1=ctll&g2=cttt&c2=ct&b2=ctct"
         var shifts = "shiftColsSW=0&shiftRowsSW=2&shiftColsSE=2&shiftRowsSE=2"
         var patch = "patchWidth=5&patchHeight=10"
