--- a/_includes/woble.html
+++ b/_includes/woble.html
@@ -2,7 +2,7 @@
     <table>
         <tr>
             <td><input name="topLeft" id="topLeft" type="text" onchange="update()" value="ct"></td>
-            <td><input name="top" id="top" type="text" onchange="update()" value="cttc"></td>
+            <td><input name="top" id="top" type="text" onchange="update()" value="ctct"></td>
             <td><input name="topRight" id="topRight" type="text" onchange="update()" value="ct"></td>
         </tr>
         <tr>
@@ -12,11 +12,11 @@
         </tr>
         <tr>
             <td>&nbsp;</td>
-            <td><input name="bottom" id="bottom" type="text" onchange="update()" value="ctc"></td>
+            <td><input name="bottom" id="bottom" type="text" onchange="update()" value="ctct"></td>
             <td>&nbsp;</td>
         </tr>
            <tr>
-            <td>&nbsp;</td>
+            <td>connection:</td>
             <td><input name="connection" id="conn" type="text" onchange="update()" value="ctct"></td>
             <td>&nbsp;</td>
         </tr>
