--- a/_includes/woble.html
+++ b/_includes/woble.html
@@ -16,7 +16,7 @@
             <td>&nbsp;</td>
         </tr>
            <tr>
-            <td>connection:</td>
+            <td align="right">connection:</td>
             <td><input name="connection" id="conn" type="text" onchange="update()" value="ctct"></td>
             <td>&nbsp;</td>
         </tr>
