--- a/_includes/Sidebar.html
+++ b/_includes/Sidebar.html
@@ -22,7 +22,7 @@
 <p>  
 <a href="https://maetempels.github.io/MAE-gf/docs/marian">Grounds by Marian</a><br>
 <a href="https://maetempels.github.io/MAE-gf/docs/flanders">Flanders grounds by &apos;t Groene Hart</a><br>
-<a href="https://maetempels.github.io/MAE-gf/docs/playground">Playground</a><br>
+<a href="https://maetempels.github.io/MAE-gf/docs/droste">Droste</a><br>
 </p>
 
 <h3>Miscellaneous</h3> 
