--- a/_includes/woble.html
+++ b/_includes/woble.html
@@ -7,7 +7,7 @@
         </tr>
         <tr>
             <td><input name="left" id="left" type="text" onchange="update()" value="ct"></td>
-            <td>pin</td>
+            <td><input name="center" id="center" type="text" onchange="update()" value="ct"></td>
             <td><input name="right" id="right" type="text" onchange="update()" value="ct"></td>
         </tr>
         <tr>
@@ -16,17 +16,28 @@
             <td>&nbsp;</td>
         </tr>
            <tr>
+            <td>&nbsp;</td>
             <td align="right">connection:</td>
             <td><input name="connection" id="conn" type="text" onchange="update()" value="ctct"></td>
             <td>&nbsp;</td>
         </tr>
  </table>
-    <a id="wobleLink" href="#val">
-        <button type="button">Go</button>
-    </a>
+    <p>
+        <img src="../images_stitches/rose.png">
+        <a id="woble" href="#val" target="_blank"><button type="button">go</button></a>
+
+        <img src="../images_stitches/bias-ltr.png">
+        <a id="ltr" href="#val" target="_blank"><button type="button">go</button></a>
+
+        <img src="../images_stitches/bias-rtl.png">
+        <a id="rtl" href="#val" target="_blank"><button type="button">go</button></a>
+    </p>
 </form>
 
 <script>
+    function droste1(stitch){
+        return `c1=${stitch}&b2=${stitch}&b1=ct&a1=ctll&g2=cttt&c2=ct`
+    }
     function update(){
         var topLeft = document.getElementById("topLeft").value
         var top = document.getElementById("top").value
@@ -37,14 +48,15 @@
         var conn = document.getElementById("conn").value
 
         var droste2 = `cross=ctct,twist=ct,c10=b20=${top},b11=b12=c15=b25=${topLeft},c21=c22=c14=b24=${topRight},c11=b21=${left},c12=b22=${right},c13=b23=${bottom},b10=c20=${conn},a11=rrrtcttt,g22=lllctcttt`
-        var droste1 = "c1=ctct&b1=ct&a1=ctll&g2=cttt&c2=ct&b2=ctct"
         var shifts = "shiftColsSW=0&shiftRowsSW=2&shiftColsSE=2&shiftRowsSE=2"
         var patch = "patchWidth=5&patchHeight=10"
         var defaultStitches = "footsideStitch=cttt&tileStitch=ctct&headsideStitch=cttt"
         var matrices = "footside=b,-&tile=88,11&headside=-,c"
-        var href = `https://d-bl.github.io/GroundForge/tiles?droste2=${droste2}&${droste1}&${matrices}&${defaultStitches}&${patch}&${shifts}&`
-
-        document.getElementById("wobleLink").href = href
+        var url = "https://d-bl.github.io/GroundForge/tiles"
+        var shared = `${url}?${matrices}&${defaultStitches}&${patch}&${shifts}&`
+        document.getElementById("woble").href = `${shared}&${droste1("ctct")}&droste2=${droste2}&`
+        document.getElementById("ltr").href = `${shared}&${droste1("clcrct")}&droste2=${droste2}&` // TODO other droste2
+        document.getElementById("rtl").href = `${shared}&${droste1("crclct")}&droste2=${droste2}&` // TODO other droste2
     }
     update()
 </script>
