images for stitches next to one another

--- a/_includes/stitches.html
+++ b/_includes/stitches.html
@@ -1,12 +1,12 @@
-A list with some less trivial stitches to copy-paste, drop or add twists at will.
+Some less trivial stitches to copy-paste, drop or add twists at will.
 
-{% include picts-left.html src="../images_stitches/crclct.png" description="crclct<br>clcrct" %}
-{% include picts-left.html src="../images_stitches/clcrclc.png" description="clcrclc<br>crclcrc" %}
-{% include picts-left.html src="../images_stitches/ctctc.png" description="ctctc<br>&nbsp;" %}
-{% include picts-left.html src="../images_stitches/ctclctc.png" description="ctclctc<br>ctcrctc" %}
-{% include picts-left.html src="../images_stitches/ctclcrctc.png" description="ctclcrctc<br>ctcrclctc" %}
-{% include picts-left.html src="../images_stitches/ctcttctc.png" description="ctcttctc<br>&nbsp;" %}
-{% include picts-left.html src="../images_stitches/tctctllctctr.png" description="tctctllctctr<br>tctctrrctctl" %}
+{% include gallery.html alt="" src="../images_stitches/crclct.png" caption="crclct<br>clcrct" %}
+{% include gallery.html alt="" src="../images_stitches/clcrclc.png" caption="clcrclc<br>crclcrc" %}
+{% include gallery.html alt="" src="../images_stitches/ctctc.png" caption="ctctc<br>&nbsp;" %}
+{% include gallery.html alt="" src="../images_stitches/ctclctc.png" caption="ctclctc<br>ctcrctc" %}
+{% include gallery.html alt="" src="../images_stitches/ctclcrctc.png" caption="ctclcrctc<br>ctcrclctc" %}
+{% include gallery.html alt="" src="../images_stitches/ctcttctc.png" caption="ctcttctc<br>&nbsp;" %}
+{% include gallery.html alt="" src="../images_stitches/tctctllctctr.png" caption="tctctllctctr<br>tctctrrctctl" %}
 
 Each second string is the mirrored version of the displayed stitch.
 Note that the last two images are two stitches with the edge pin left out,
