--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -2,5 +2,5 @@
     <!-- image paths are relative to docs -->
     <img src="{{ include.src }}" alt="{{ include.alt }}">
     <!-- make sure the captions have a fixed number of lines to avoid dancing images -->
-    <figcaption>{{ include.caption }}</figcaption>
+    <figcaption style="background-color: #ddd; border-radius: 3px; margin-right: 1em;">{{ include.caption }}</figcaption>
 </figure>
