styling: images next to one another

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,4 +1,4 @@
-<figure>
+<figure style="display: inline-block">
     <!-- image paths are relative to docs -->
     <img src="{{ include.src }}" alt="{{ include.alt }}">
     <!-- make sure the captions have a fixed number of lines to avoid dancing images -->
