--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -26,11 +26,11 @@
         <img src="../images_stitches/rose.png">
         <a id="wobble" href="#val" target="_blank"><button type="button">go</button></a>
 
-        <img src="../images_stitches/bias-ltr.png">
-        <a id="ltr" href="#val" target="_blank"><button type="button">go</button></a>
+<!--        <img src="../images_stitches/bias-ltr.png">-->
+<!--        <a id="ltr" href="#val" target="_blank"><button type="button">go</button></a>-->
 
-        <img src="../images_stitches/bias-rtl.png">
-        <a id="rtl" href="#val" target="_blank"><button type="button">go</button></a>
+<!--        <img src="../images_stitches/bias-rtl.png">-->
+<!--        <a id="rtl" href="#val" target="_blank"><button type="button">go</button></a>-->
     </p>
 </form>
 
