another white space attempt

--- a/_includes/stitches.html
+++ b/_includes/stitches.html
@@ -1,5 +1,5 @@
-Some less trivial stitches to copy-paste, drop or add twists at will.<br>
-{% include gallery.html alt="" src="../images_stitches/crclct.png" caption="crclct<br>clcrct" %}
+Some less trivial stitches to copy-paste, drop or add twists at will. {%
+   include gallery.html alt="" src="../images_stitches/crclct.png" caption="crclct<br>clcrct" %}
 {% include gallery.html alt="" src="../images_stitches/clcrclc.png" caption="clcrclc<br>crclcrc" %}
 {% include gallery.html alt="" src="../images_stitches/ctctc.png" caption="ctctc<br>&nbsp;" %}
 {% include gallery.html alt="" src="../images_stitches/ctclctc.png" caption="ctclctc<br>ctcrctc" %}
