--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -28,7 +28,7 @@
         <a id="ltrButton" href="#val" target="_blank"><button type="button">w.i.p.</button></a>
 
         <img src="../images_stitches/bias-rtl.png">
-        <a id="rtlButton" href="#val" target="_blank"><button type="button">w.i.p.</button></a>
+        <a id="rtlButton" href="#val" target="_blank"><button type="button">w.i.p. g</button></a>
     </p>
 </form>
 
