added center var

--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -28,7 +28,7 @@
         <a id="ltrButton" href="#val" target="_blank"><button type="button">w.i.p.</button></a>
 
         <img src="../images_stitches/bias-rtl.png">
-        <a id="rtlButton" href="#val" target="_blank"><button type="button">w.i.p. g</button></a>
+        <a id="rtlButton" href="#val" target="_blank"><button type="button">w.i.p. gg</button></a>
     </p>
 </form>
 
@@ -42,6 +42,7 @@
         var top = document.getElementById("top").value
         var topRight = document.getElementById("topRight").value
         var left = document.getElementById("left").value
+        var center = document.getElementById("center").value
         var right = document.getElementById("right").value
         var bottomLeft = document.getElementById("bottomLeft").value
         var bottom = document.getElementById("bottom").value
