--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -25,7 +25,7 @@
         <a id="roseButton" href="#val" target="_blank"><button type="button">go</button></a>
 
         <img src="../images_stitches/bias-ltr.png">
-        <a id="ltrButton" href="#val" target="_blank"><button type="button">w.i.p.</button></a>
+        <a id="ltrButton" href="#val" target="_blank"><button type="button">go</button></a>
 
         <img src="../images_stitches/bias-rtl.png">
         <a id="rtlButton" href="#val" target="_blank"><button type="button">go</button></a>
