--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -35,7 +35,7 @@
 
 <script>
     function droste1(stitch){
-        return `c1=${stitch}&b2=${stitch}&b1=ct&a1=ctll&g2=cttt&c2=ct`
+        return `c1=${stitch}&b2=${stitch}&b1=ct&a1=ctll&g2=ctrr&c2=ct`
     }
     function update(){
         var topLeft = document.getElementById("topLeft").value
