--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -21,8 +21,9 @@
         <input name="connection" id="conn" type="text" onchange="update()" value="ctct">
     </p>
     <p>
-        <img src="../images_stitches/rose.png">
-        <a id="roseButton" href="#val" target="_blank"><button type="button">go</button></a>
+        <!-- <img src="../images_stitches/rose.png">
+        <a id="roseButton" href="#val" target="_blank"><button type="button">go</button></a> -->
+        <a id="roseButton" href="#val" target="_blank"><<img src="../images_stitches/rose.png" class="clpic>"</a>
 
         <img src="../images_stitches/bias-ltr.png">
         <a id="ltrButton" href="#val" target="_blank"><button type="button">go</button></a>
