--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -23,13 +23,15 @@
     <p>
         <!-- <img src="../images_stitches/rose.png">
         <a id="roseButton" href="#val" target="_blank"><button type="button">go</button></a> -->
-        <a id="roseButton" href="#val" target="_blank"><<img src="../images_stitches/rose.png" class="clpic"></a>
+        <a id="roseButton" href="#val" target="_blank"><img src="../images_stitches/rose.png" class="clpic"></a>
 
-        <img src="../images_stitches/bias-ltr.png">
-        <a id="ltrButton" href="#val" target="_blank"><button type="button">go</button></a>
+        <!-- <img src="../images_stitches/bias-ltr.png">
+        <a id="ltrButton" href="#val" target="_blank"><button type="button">go</button></a>  -->
+        <a id="ltrButton" href="#val" target="_blank"><img src="../images_stitches/bias-ltr.png" class="clpic"></a>
 
-        <img src="../images_stitches/bias-rtl.png">
-        <a id="rtlButton" href="#val" target="_blank"><button type="button">go</button></a>
+        <!-- <img src="../images_stitches/bias-rtl.png">
+        <a id="rtlButton" href="#val" target="_blank"><button type="button">go</button></a> -->
+        <a id="trlButton" href="#val" target="_blank"><img src="../images_stitches/bias-rtl.png" class="clpic"></a>
     </p>
 </form>
 
