--- a/_includes/wobble.html
+++ b/_includes/wobble.html
@@ -31,7 +31,7 @@
 
         <!-- <img src="../images_stitches/bias-rtl.png">
         <a id="rtlButton" href="#val" target="_blank"><button type="button">go</button></a> -->
-        <a id="trlButton" href="#val" target="_blank"><img src="../images_stitches/bias-rtl.png" class="clpic"></a>
+        <a id="rtlButton" href="#val" target="_blank"><img src="../images_stitches/bias-rtl.png" class="clpic"></a>
     </p>
 </form>
 
