--- a/_includes/formule.html
+++ b/_includes/formule.html
@@ -1,3 +1,5 @@
+<!-- style for formulas -->
+
 <div style="background-color: White;">
   &nbsp;
   <p style="margin-left:2em; font: 12px courier;">{{include.formule}}</p>
