what this is for

--- a/_includes/p-l-c.html
+++ b/_includes/p-l-c.html
@@ -1,3 +1,5 @@
+<!-- a clickable picture with a blue line, aligned middle -->
+
 <figure>
   <p style="text-align: center">
   <a href="{{ include.lnk }}">  
