what this is for

--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -1,3 +1,5 @@
+<!-- a clickable picture, blue line, left aligned, with text -->
+
 <figure>
 	<a href="{{ include.lnk }}">  
 	<img src="{{ include.src }}" alt="{{ include.alt }}" 
