--- a/_includes/p-l-c.html
+++ b/_includes/p-l-c.html
@@ -1,4 +1,4 @@
-<!-- a clickable picture with a blue line, aligned middle -->
+<!-- a clickable picture with a blue line, aligned middle, no text -->
 
 <figure>
   <p style="text-align: center">
