what this is for

--- a/_includes/p-l-r.html
+++ b/_includes/p-l-r.html
@@ -1,7 +1,9 @@
+<!-- a clickable picture, with a blue line, aligned right, with text -->
+
 <figure>
 	<a href="{{ include.lnk }}">  
 	<img src="{{ include.src }}" alt="{{ include.alt }}" 
-	class="clpic"  style="float: right; margin-left:1em;">
+	class="clpic" style="float: right; margin-left:1em;">
 	</a>
 	<p>{{ include.description }}</p>
 	<p style="clear: both"></p>
