what this is for

--- a/_includes/p-l-x.html
+++ b/_includes/p-l-x.html
@@ -1,3 +1,5 @@
+<-- clickable picture, with line, aligned left, with margin on the right, and text --> 
+
 <figure>
 	<a href="{{ include.lnk }}">  
 	<img src="{{ include.src }}" alt="{{ include.alt }}" 
