--- a/_includes/picts-centr.html
+++ b/_includes/picts-centr.html
@@ -1,3 +1,5 @@
+<-- a picture in the middle of the line -->
+
 <figure>
   <p style="text-align: center;">
   <img alt="{{ include.alt }}" src="{{ include.src }}">
