--- a/_includes/picts-right.html
+++ b/_includes/picts-right.html
@@ -1,3 +1,5 @@
+<!-- a picture on the right, with text left of it -->
+
 <figure>
 	<img src="{{ include.src }}" alt="{{ include.alt }}" style="float: right; margin-left:1em">
 	<p>{{ include.description }}</p>
