--- a/_includes/p-l-x.html
+++ b/_includes/p-l-x.html
@@ -1,5 +1,4 @@
-<-- clickable picture, with line, aligned left, with margin on the right, and text --> 
-<-- margin is needed if there is a picture left, and one right, and text in between -->
+<!-- clickable picture, with line, aligned left, and text --> 
 
 <figure>
 	<a href="{{ include.lnk }}">  
