--- a/_includes/picts-centr.html
+++ b/_includes/picts-centr.html
@@ -1,4 +1,4 @@
-<-- a picture in the middle of the line -->
+<!-- a picture in the middle of the line -->
 
 <figure>
   <p style="text-align: center;">
