--- a/_includes/picts-left.html
+++ b/_includes/picts-left.html
@@ -1,4 +1,4 @@
-<-- a picture on the left, with text next to it -->
+<!-- a picture on the left, with text next to it -->
 
 <figure>
 	<img src="{{ include.src }}" alt="{{ include.alt }}" style="float: left; margin-right:1em">
