--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -1,4 +1,5 @@
-<!-- a clickable picture, blue line, left aligned, with text -->
+<!-- a clickable picture, line, left aligned, with text -->
+<!-- use p-l-x if also a picture right is needed -->
 
 <figure>
 	<a href="{{ include.lnk }}">  
