--- a/_includes/p-l-l.html
+++ b/_includes/p-l-l.html
@@ -1,4 +1,4 @@
-<!-- a clickable picture, line, left aligned, with text -->
+<!-- a clickable picture, border, left aligned, with text -->
 <!-- use p-l-x if also a picture right is needed -->
 
 <figure>
