--- a/_includes/p-l-r.html
+++ b/_includes/p-l-r.html
@@ -1,4 +1,4 @@
-<!-- a clickable picture, with a line, aligned right, with text -->
+<!-- a clickable picture, border, aligned right, with text -->
 
 <figure>
 	<a href="{{ include.lnk }}">  
