--- a/_includes/p-l-x.html
+++ b/_includes/p-l-x.html
@@ -1,4 +1,4 @@
-<!-- clickable picture, with line, aligned left, and text --> 
+<!-- clickable picture, with border, aligned left, and text --> 
 <!-- use this if a picture left and a picture right is needed with text in the middle, since this include does not have the clear -->
 
 <figure>
